# mcpbio

./: .gitignore  Makefile  kegg.py  pyproject.toml  weather.py
biomarker_mcp/: mcp_kegg_protein_tool.py  pyproject.toml  server.py  test_server.py
kegg_mcp/: functional_mcp.py  go.py  pyproject.toml  test_tools.py  weather.py
mcp_agent/: bio_ui.py  kegg.py  plan.py  prompts.py  test_tools.py  whether.py
