[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp==1.8.1",
    "uv>=0.7.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "jinja2>=3.1.3",
    "requests>=2.32.3",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
weather = "weather:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
]

